@@ -3,7 +3,6 @@ TODO list
 * Think more carefully about the relation between X509 and X509_NAME
   _set_{subject,issuer} dup the new name and free the old one.
 * Consider Pyrex
-* Update tsafe.Connection and make sure the docs are correct
 * Updated docs! (rpm, ...)
 * _Somehow_ get makefile to work!
 * httpslib, imapslib, ftpslib?
